# codeweaver

./: .coverage.runnervm35a4x.14047.XLGuApXx  .coverage.runnervm35a4x.5896.XoeCLVyx  .coverage.runnervm35a4x.6646.XUNzPizx  .coverage.runnervm35a4x.6649.XyliMSEx  .dockerignore  .editorconfig  .env.example  .gitconfig  .gitignore  .mailmap  .mcp.json  .sourcery.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CIRCULAR_IMPORT_ISSUE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTORS_LICENSE_AGREEMENT.md  Changes to account for:.md  DEVELOPMENT_SUMMARY.md  DI_IMPLEMENTATION_STATUS.md  DOCKER.md  Dockerfile  ERROR_RECOVERY_TEST_FIX_REPORT.md  FINAL_REPORT.md  FINAL_TEST_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_307.md  IMPLEMENTATION_PROGRESS_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTROSPECTION_FINDINGS.md  INVESTIGATION_REPORT.md  KNOWN_ISSUES.md  LAZY_IMPORT_FIX_SUMMARY.md  NEXT_STEPS.md  NOTES.md  PHASE_3_COMPLETE.md  PHASE_6_COMPLETE.md  (+87 more)
.claude/: ecc-tools.json  hookify.constitutional-violations.md  hookify.scattered-temp-files.md  hookify.scope-creep.md  identity.json  mcp.backup_20251117_215939.json  mcp.json  settings.json.license
.codeweaver/: exports_config.json  lazy_import_rules.yaml
.codex/: AGENTS.md  config.toml
.exportify/: .gitignore  config.yaml
.github/: actionlint.yml
.jules/: bolt.md  sentinel.md
.mise/: mise.ci.toml  mise.cloudagent.toml  mise.dev.toml  mise.toml
.serena/: project.yml
.specify/: DEPENDENCY_PLACEHOLDER_FIX.md
claudedocs/: .document-status.md  AGENT_17_SUMMARY.md  AGENT_19_REPORT.md  AGENT_DELIVERABLE_SUMMARY.md  ALPHA1_TEST_REPORT.md  ALPHA_RELEASE_SUMMARY.md  ANALYSIS_README.md  AUTO_INDEXING_IMPLEMENTATION.md  CLI_CORRECTIONS_PLAN.md  CLI_FINAL_SUMMARY.md  CLI_TESTING_COMPLETE.md  CLI_TEST_FILES_MANIFEST.md  CLI_TEST_SUITE_SUMMARY.md  CLI_VALIDATION_REPORT.md  CLI_VALIDATION_RESULTS.md  CONFIG_FIXES_SUMMARY.md  CONFIG_PROFILE_IMPLEMENTATION.md  CW_INDEX_V2_SPEC.md  CYCLOPTS_TEST_FIX.md  DEVELOPMENT_SUMMARY.md  DI_IMPACT_VISUALIZATION.md  DI_IMPROVEMENT_PLAN.md  DI_MIGRATION_STATUS_PHASE_2.md  DOCUMENTATION_PLAN_ALPHA_6.md  EDGE_CASE_3_REPORT.md  EMBEDDING_PROVIDER_PATTERNS.md  EXCEPTION_REFACTORING_SUMMARY.md  HELPER_INTEGRATION_SUMMARY.md  IMPLEMENTATION-SUMMARY-CONFIG-ANALYZER-TESTS.md  IMPLEMENTATION_SUMMARY.md  IMPORT_FIX_SENTENCETRANSFORMERS_RERANKING.md  INCREMENTAL_INDEXING.md  INDEXER_STATE_ANALYSIS.md  INTEGRATED_DI_MONOREPO_STRATEGY.md  INVESTIGATION_REPORT.md  LAZY_IMPORT_FIX_SUMMARY.md  MIGRATION_MILESTONE_3_TASK_4.md  MONOREPO_ANALYSIS_INDEX.md  PHASE1_TESTS_SUMMARY.md  PHASE_1_COMPLETE.md  (+203 more)
codeweaver-plugin/: .mcp.json  README.md
docker/: entrypoint.sh
docs/: CLI.md  CODE_REVIEW_RESPONSE.md  COVERAGE_FIX.md  INDEXER_STATE_ANALYSIS.md  MIGRATION_DOCS_INDEX.md  RELEASE_CHECKLIST.md  SECURITY_ANALYSIS.md  TESTPYPI_SETUP.md  WHY.md  chunker_usage.md  comparison.md  embedding-migration-guide.md  indexer-deduplication-analysis.md  lazy-import-investigation.md  migration-api-reference.md  migration-quick-reference.md  publishing.md  registry-submission.md  troubleshooting-migration.md  vector-store-validation.md  versioning.md
docs-site/: .gitignore  AGENTS.md  POC-SUMMARY.md  README.md  astro.config.mjs  astro.config.mts  astro.config.ts  mise.toml  package-lock.json  package.json  package.json.bak  tags.yml  tsconfig.json  wrangler.json  wrangler.jsonc
examples/: EXAMPLE_USAGE_create_lazy_getattr.md  WATCHFILES_LOGGING_GUIDE.md  chunker_usage.md  chunking_demo.py  watchfiles_logging_examples.py
issues/: KNOWN_ISSUES.md  todo-tree-20251117-1858.txt
mise-tasks/: diagnostic_warning.py  resolve-rebase.sh  validate-lazy-imports.py
node_types/: node_types.json
plans/: DEPENDENCY_INJECTION_PROPOSAL.md  DI_ARCHITECTURE_DIAGRAMS.md  DI_ARCHITECTURE_SUMMARY.md  DI_IMPLEMENTATION_CHECKLIST.md  DI_PROVIDER_EXAMPLES.md  IMPLEMENTATION_PLAN.md  PHASE_3_MONOREPO_ANALYSIS.md  README.md  architecture-fix-recommendations.md  architecture-refactor-completion-summary.md  backup-system-cleanup-plan.md  backup-system-completion-plan.md  backup-system-deprecation-analysis.md  backup-system-phase1-completion-report.md  backup-system-phase2-completion-report.md  backup-system-phase3-completion-report.md  backup-system-test-coverage-report.md  dependency-injection-architecture-plan.md  engine-di-refactor.md  flexible-extension-system-spec.md  integrated-refactor-plan.md  node_type_parser_implementation_spec.md  optional-enhancements-completion.md  phase-4-completion-summary.md  phase-4-implementation-details.md  phase-4-test-validation-status.md  planned_monorepo_structure.md  provider-env-registry-refactor.md  reranking_di_migration.md  reranking_di_migration_progress.md  server-di-refactor.md  telemetry-integration-checklist.md  telemetry-metrics-implementation-plan.md  test-suite-troubleshooting-report.md  ui-output-refactoring.md  unified-cli-ux.md  validation-summary.md  vector-types-deprecated-removal-report.md  vector-types-phase1-completion-report.md  vector-types-phase2-completion-report.md  (+4 more)
schema/: codeweaver.schema.json
scripts/: ORGANIZATION.md  README.md  add_missing_patterns.py  analyze_dependencies.py  analyze_grammar_structure.py  apply_remaining_patterns.py  build_language_mappings.py  convert_voyage_nano_to_onnx.py  cwdev.py  dev-shell-init.zsh  diagnose_pickling.py  diagnose_process_executor.py  fix_provider_imports.py  fix_search_imports.py  gen-api-docs.py  gen_api_docs.py  generate_delimiters.py  generate_supported_languages.py  get_langs.py  hf_models.json  measure_constants_perf.py  mteb_to_codeweaver.py  optimize_composite_checks.py  optimized_patterns.py  performance_baseline.py  test_versioned_profile_standalone.py  update-licenses.py  validate_architecture.py  validate_proposed_structure.py.disabled  verify-beta-fixes.sh  verify_checkpoint_compatibility.py
specs/: voyage4-shared-vector-space-design.md
tests/: .sourcery.yaml  CLI_TESTS_README.md  QDRANT_ENV_VARS.md  QDRANT_QUICKREF.md  QDRANT_TESTING.md  README.md  __init__.py  conftest.py  debug_import.py  test_delimiters.py  (+7 more)
(+1753 files in other folders)
