#:tombi schema.strict = false
# SPDX-FileCopyrightText: 2025 Knitli Inc.
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[project]
# It seems 'codeweaver' is too similar to 'codeweave' on PyPI, so we use 'code-weaver' as the package name
name = "code-weaver"
description = "Extensible MCP server for semantic code search with plugin architecture supporting multiple embedding providers, vector databases, and data sources."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "MIT OR Apache-2.0" }
authors = [
  { name = "Knitli Inc." },
  { name = "Adam Poulemanos", email = "adam@knit.li" },
]
keywords = [
  "agents",
  "ai",
  "anthropic",
  "artificial intelligence",
  "ast-grep",
  "azure",
  "bedrock",
  "claude",
  "code analysis",
  "code embeddings",
  "code indexing",
  "code intelligence",
  "code search",
  "code understanding",
  "codebase",
  "codebase analysis",
  "codebase management",
  "cohere",
  "docarray",
  "embedding",
  "embeddings",
  "extensible",
  "fastembed",
  "fastmcp",
  "framework",
  "genai",
  "google",
  "grok",
  "groq",
  "huggingface",
  "hybrid search",
  "information retrieval",
  "large language models",
  "llama",
  "llms",
  "mcp",
  "mcp protocol",
  "mcp server",
  "mistral",
  "model context protocol",
  "natural language processing",
  "nlp",
  "openai",
  "perplexity",
  "platform",
  "plugin architecture",
  "pydantic",
  "pydantic-ai",
  "qdrant",
  "rerank",
  "retrieval",
  "search",
  "semantic search",
  "sentence transformers",
  "tree-sitter",
  "vector",
  "vector database",
  "vector embeddings",
  "vector search",
  "vector store",
  "voyageai",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Indexing",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = [
  # Core functionality
  "aenum>=3.1.16",
  "ast-grep-py>=0.40.1",
  "blake3>=1.0.8",
  "code-weaver-daemon",
  "code-weaver-tokenizers",
  # CLI framework and output
  "cyclopts>=4.3.0",
  # onnxruntime currently does not support python 3.14
  "fastembed>=0.7.4; python_version < '3.14'",
  # MCP server framework
  "fastmcp>=2.13.3",
  "mcp>=1.19.0",
  # Numerical and ML
  "numpy>=2.3.5",
  # Infrastructure and utilities
  "posthog>=7.0.1",
  "psutil>=7.1.3",
  # Core data models and validation
  "py-cpuinfo>=9.0.0",
  "pydantic>=2.12.5",
  "pydantic-ai-slim>=1.30.1",
  "pydantic-graph>=1.30.1",
  "pydantic-settings[toml,yaml]>=2.12.0",  # Pulls: tomli>=2.0.1, pyyaml>=6.0.1
  "qdrant-client>=1.16.1",
  "rich>=14.2.0",
  "rignore>=0.7.6",
  # until onnxruntime supports python 3.14, we'll substitute fastembed with sentence-transformers for 3.14 to keep equivalent functionality
  # this is less than desirable because sentence-transformers is a *very heavy* dependency compared to fastembed
  "sentence-transformers>=5.1.2; python_version <= '3.14'",
  "tenacity>=9.1.2",
  "textcase>=0.4.5",
  "tomli-w>=1.2.0",
  "typing_extensions>=4.15.0",
  "uuid7>=0.1.0; python_version < '3.14'",
  "uvicorn[standard]>=0.38.0",
  "uvloop>=0.22.1; python_implementation == 'CPython' and platform_system != 'Windows'",
  "voyageai>=0.3.5",
  "watchfiles>=1.1.1",
]
dynamic = ["version"]

[project.urls]
Changelog = "https://github.com/knitli/codeweaver/blob/main/CHANGELOG.md"
# Documentation = "https://dev.knitli.com/codeweaver" not live yet
Homepage = "https://knitli.com"
Issues = "https://github.com/knitli/codeweaver/issues"
Repository = "https://github.com/knitli/codeweaver"

[project.scripts]
codeweaver = "codeweaver.cli.__main__:main"
cw = "codeweaver.cli.__main__:main"

[project.optional-dependencies]
# ==== Providers ====
anthropic = ["pydantic-ai-slim[anthropic]"]
# eunomia middleware - see https://gofastmcp.com/integrations/eunomia-authorization
auth-eunomia = ["eunomia-mcp"]
# ==== Authentication and Authorization Middleware ====
# Optional middleware to add authentication and authorization capabilities to the CodeWeaver server.
# This allows you to secure your CodeWeaver instance with various authentication providers and authorization policies.
# The middleware can be used to enforce access control policies, authenticate users, and manage permissions.
# TODO: Implement authentication and authorization middleware -- should be simple to add
# permit.io middleware - see https://gofastmcp.com/integrations/permit
auth-permitio = ["permit-fastmcp"]
# ==== Authentication and Authorization Middleware/Addons ====
# Settings/Config Secrets
aws-secrets-manager = ["pydantic-settings[yaml,toml,aws-secrets-manager]"]
azure-key-vault = ["pydantic-settings[yaml,toml,azure-key-vault]"]
bedrock = [
  "pydantic-ai-slim[bedrock]",
  "types-boto3-custom",
]
cohere = ["pydantic-ai-slim[cohere]"]
# ==== Data Sources ====
duckduckgo = ["pydantic-ai-slim[duckduckgo]"]
fastembed = ["fastembed; python_version < '3.14'", "py-cpuinfo"]
# Requires additional setup, see https://qdrant.github.io/fastembed/examples/FastEmbed_GPU/
fastembed-gpu = ["fastembed-gpu; python_version < '3.14'", "py-cpuinfo"]
# workos AuthKit middleware - see https://gofastmcp.com/integrations/authkit
# No additional dependencies required, it's purely REST-based.
# Enable with environment variables:
#  ## Instruct FastMCP to use the AuthKit provider:
#    FASTMCP_SERVER_AUTH=AUTHKIT
#     configure the AuthKit provider
#     FASTMCP_SERVER_AUTH_AUTHKITPROVIDER_AUTHKIT_DOMAIN="https://your-project-12345.authkit.app"
#     FASTMCP_SERVER_AUTH_AUTHKITPROVIDER_BASE_URL="http://localhost:8000"
# All groups for users - full featured with all middleware
full = [
  "permit-fastmcp",
  "eunomia-mcp",
  "pydantic-ai-slim[openai,cohere,google,anthropic,groq,mistral,bedrock,huggingface,duckduckgo,tavily,retries]",
  "pydantic-settings[yaml,toml,aws-secrets-manager,azure-key-vault,gcp-secret-manager]",
  "permit-fastmcp",
  "sentence-transformers>=5.1.2",
  "types-boto3-custom",
]
full-gpu = [
  "permit-fastmcp",
  "eunomia-mcp",
  "fastembed-gpu; python_version < '3.14'",
  "permit-fastmcp",
  "pydantic-ai-slim[openai,cohere,google,anthropic,groq,mistral,bedrock,huggingface,duckduckgo,tavily,retries]",
  "pydantic-settings[yaml,toml,aws-secrets-manager,azure-key-vault,gcp-secret-manager]",
  "sentence-transformers",
  # see note below about why this is commented out
  #  "sentence-transformers[onnx-gpu]; python_version>='3.12' and python_version<'3.14'",
]
gcp-secret-manager = ["pydantic-settings[yaml,toml,gcp-secret-manager]"]
google = ["pydantic-ai-slim[google]"]
gpu-support = [
  "fastembed-gpu; python_version < '3.14'",
  # see note below about why this is commented out
  #  "sentence-transformers[onnx-gpu]; python_version>='3.12' and python_version<'3.14'",
]
groq = ["pydantic-ai-slim[groq]"]
# --- Embedding and Agent Providers --- (no rerank)
huggingface = ["pydantic-ai-slim[huggingface]"]
# ==== Vector Stores ====
in-memory = ["qdrant-client", "tokenizers"]
mistral = ["pydantic-ai-slim[mistral]"]
# OpenAI includes support for:
#   Cerebras, DeekSeek, Ollama, OpenRouter, Vercel, Perplexity, Moonshot, FireworksAI,
#   TogetherAI, Azure AI Foundry, Heroku, and Github Models, X-AI
# which all use the OpenAI API
openai = ["pydantic-ai-slim[openai]"]
qdrant = ["qdrant-client"]
recommended = [
  "fastembed; python_version < '3.14'",
  "sentence-transformers",
  "tokenizers",
  "py-cpuinfo",
  "voyageai",
  "pydantic-ai-slim[openai,anthropic,duckduckgo,tavily,retries]",
]
recommended-local-only = [
  "fastembed; python_version < '3.14'",
  "sentence-transformers",
  "tokenizers",
  "py-cpuinfo",
  # openai for ollama local models
  "pydantic-ai-slim[openai,duckduckgo,retries]",
]
sentence-transformers = [
  "sentence-transformers",
  "py-cpuinfo",
]
tavily = ["pydantic-ai-slim[tavily]"]
# NOTE: Why not GPU or OpenVino support for sentence-transformers?
# The underlying runtimes for these packages, when resolved against our other dependencies,
# essentially require us to choose between support for Python 3.14 and these packages.
# When python 3.14 is included, then the only compatible build results in transformers version 3.x
# Which does not have the `SparseEncoder` class required for sparse-encodings.
# We think the sparse-encoding use case is much broader than GPU or OpenVino acceleration for most users,
# so we are leaving these out of the official optional dependencies for now.
# If you need GPU or OpenVino support, you can install these packages manually in your environment.
# sentence-transformers-gpu = [
# GPU requires additional setup
#  "sentence-transformers[onnx-gpu]; python_version>='3.12' and python_version<'3.14'",
# ]
# sentence-transformers-openvino = [
#     "sentence-transformers[openvino]",
#     "py-cpuinfo",
# ]
voyageai = ["voyageai"]

[dependency-groups]
dev = [
  # black is used to format generated code
  "black>=25.12.0",
  "ruff>=0.14.8",
  "serena>=0.9.1",
  "ty>=0.0.1a31",
  "types-boto3-custom",
  "uv>=0.9.17",
]
build = ["hatchling>=1.27.0", "twine>=6.2.0", "uv-dynamic-versioning>=0.11.2"]
dev-helpers = [
  "ipython>=9.8.0",
  "jsonlines>=4.0.0",
  "memory-profiler>=0.61.0",
  "pdbpp>=0.11.7",
  "pyperclip>=1.11.0",
  "superclaude>=4.1.9",
]
docs = [
  "griffe>=1.15.0",
]
test = [
  "dirty-equals>=0.11.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-env>=1.2.0",
  "pytest-examples>=0.0.18",
  "pytest-flakefinder>=1.1.0",
  "pytest-mock>=3.15.1",
  "pytest-report>=0.2.1",
  "pytest-timeout>=2.4.0",
]

[build-system]
requires = [
  "hatchling>=1.28.0",
  "twine>=6.2.0",
  "uv-dynamic-versioning>=0.11.2"
]
build-backend = "hatchling.build"

# TODO: Integrate hatch plugins for:
#  - readme: https://github.com/hynek/hatch-fancy-pypi-readme

[tool.coverage.run]
omit = ["scripts/*", "mise-tasks/*", "typings/*", ".venv/*"]

[tool.hatch.build.hooks.version]
additionalProperties = true
path = "src/codeweaver/_version.py"
# The reuse statements prevent REUSE from considering this snippet for license compliance, which would error
# REUSE-IgnoreStart
template = '''# SPDX-FileCopyrightText: 2025 Knitli Inc.
# SPDX-License-Identifier: MIT OR Apache-2.0
"""Version information for CodeWeaver."""
from typing import Final


__version__: Final[str] = "{version}"

__all__ = ("__version__",)
'''
# REUSE-IgnoreEnd

[tool.hatch.build.targets.wheel]
artifacts = ["*.so", "src/**", "vendored/**"]

[tool.hatch.build.targets.wheel.force-include]
"LICENSES" = "LICENSES"
"typings" = "typings"
"README.md" = "README.md"
"SECURITY.md" = "SECURITY.md"
"sbom.spdx" = "sbom.spdx"
"LICENSE-Apache-2.0" = "LICENSE-APACHE-2.0"
"LICENSE-MIT" = "LICENSE-MIT"
"src/codeweaver" = "codeweaver"

[tool.hatch.build.targets.sdist]
include = [
  ".gitignore",
  "ARCHITECTURE.md",
  "CHANGELOG.md",
  "CONTRIBUTORS_LICENSE_AGREEMENT.py",
  "LICENSE",
  "LICENSE-APACHE-2.0",
  "LICENSE-MIT",
  "LICENSES",
  "PRIVACY_POLICY.md",
  "README.md",
  "REUSE.toml",
  "SECURITY.md",
  "context7.json",
  "context7.json.license",
  "pyproject.toml",
  "sbom.spdx",
  "schema/**",
  "src/**",
  "typings/**",
  "uv.lock",
  "uv.lock.license",
  "vendored/**",
]
exclude = [
  ".claude/**",
  ".roo/**",
  ".serena/**",
  ".specify/**",
  ".vscode/**",
  "claudedocs/**",
  "data/**",
  "docker/**",
  "docs-site/**",
  "mise-tasks/**",
  "overrides/**",
  "plans/**",
  "scripts/**",
  "specs/**",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.pytest]
# tombi: format.rules.array-values-order.disabled = true
addopts = [
  # While we don't chase coverage, we want to ensure a minimum bar to catch missing tests
  # We can raise this over time as the project matures
  "--cov-fail-under=50",
  "--cov-report=html",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov=codeweaver",
  "--import-mode=importlib",
  "--strict-config",
  "--strict-markers",
  # Exclude resource-intensive tests by default
  # Override with: pytest -m "expensive" or pytest -m "requires_models" to run these tests
  "-ra",
  "-m",
  "not expensive and not requires_models and not requires_gpu and not requires_api_keys",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
  "ignore::UserWarning",
  "ignore::urllib3.exceptions.SystemTimeWarning",
]
markers = [
  "async_test: Asynchronous tests (in addition to pytest.mark.asyncio)",
  # Performance & benchmarks
  "benchmark: Performance benchmark tests",
  # Configuration & environment
  "config: Configuration-related tests",
  # Development & debugging
  "debug: Tests for debugging purposes",
  "dev_only: Tests that should only run in development",
  "docker: Tests that require Docker and Docker Compose (may fail in some CI environments)",
  "e2e: End-to-end tests that test complete workflows",
  # Feature-specific
  "embeddings: Tests related to embedding functionality",
  "env_vars: Tests that depend on environment variables",
  "expensive: Tests taking more than 30 seconds to complete",
  "external_api: Tests that interact with external APIs",
  "fixtures: Tests that heavily rely on pytest fixtures",
  # Stability & reliability
  "flaky: Tests that may occasionally fail due to timing or external factors",
  "indexing: Tests related to code indexing",
  "integration: Integration tests that test component interactions",
  # Platform-specific
  "linux_only: Tests that only run on Linux platforms",
  "macos_only: Tests that only run on macOS platforms",
  "mcp: Tests related to MCP protocol functionality",
  "mock_only: Tests that only use mocked dependencies",
  "network: Tests that require network access",
  # Test types
  "parametrize: Parametrized tests with multiple test cases",
  "performance: Performance-related tests",
  "qdrant: Tests that require Qdrant vector database",
  # External dependencies
  "real_providers: Tests using actual embedding/vector store providers (not mocks)",
  "requires_api_keys: Tests requiring external API credentials and authentication",
  "requires_gpu: Tests requiring GPU hardware for execution",
  "requires_models: Tests requiring ML model downloads and local model files",
  "retry: Tests that may need retries",
  "search: Tests related to search functionality",
  "server: Tests related to server functionality",
  "services: Tests related to services layer",
  "skip_ci: Tests to skip in CI/CD environments",
  "slow: Tests that take a significant amount of time to run",
  "telemetry: Tests related to telemetry and metrics",
  "timeout: Tests with specific timeout requirements",
  "timing_sensitive: Tests with strict timing requirements that may be environment-dependent",
  # Test categories
  "unit: Unit tests that test individual components in isolation",
  "validation: Validation tests that ensure system consistency",
  "voyageai: Tests that require VoyageAI API access",
  "windows_only: Tests that only run on Windows platforms",
]
minversion = "9.0"
python_classes = ["Test*"]
python_files = ["*_test.py", "test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = "600"
timeout_method = "thread"
# Override timeout for specific markers
timeout_func_only = true  # Only apply timeout to test functions, not setup/teardown

[tool.ty.environment]
python-version = "3.12"
root = ["./src", "./tests", "./scripts", "./mise-tasks"]
python = "./.venv"
extra-paths = ["./typings"]

[tool.ty.rules]
# === Core Type Safety Rules (kept strict for src/) ===
# These remain as errors by default and will catch real bugs in production code

# === Test Framework Limitations ===
# ty doesn't understand pytest mocks/fixtures - these are inherent limitations, not real bugs
possibly-missing-attribute = "ignore"  # Pytest fixtures don't have static attributes
unresolved-attribute = "warn"  # Test mocks may have dynamic attributes
unknown-argument = "warn"  # Pytest fixtures injected dynamically
unresolved-reference = "warn"  # Test references may be dynamic
# === Type Inference Limitations ===
# ty is overly strict with Literal inference in dict lookups and dynamic patterns
invalid-argument-type = "warn"  # Many false positives in capabilities dicts and code gen
missing-typed-dict-key = "warn"  # Often false positive with dynamic TypedDict construction (e.g., **dict comprehension)
# === Style and Refactoring Suggestions ===
redundant-cast = "ignore"  # Informational only, not bugs
# === Optional Dependencies ===
# Scripts may import optional dependencies (e.g., mkdocs_gen_files, black)
unresolved-import = "warn"  # Downgrade to warn for optional dependencies

[tool.ty.src]
include = ["./src", "./tests", "./scripts", "./mise-tasks"]
# Exclude vendored code, typings, and intentionally malformed test fixtures
exclude = ["./typings", "./tests/fixtures/malformed.py"]

# === Per-Directory Overrides ===
# Apply different strictness levels: strict for src/, lenient for scripts/mise-tasks/tests

# Scripts: Code generation, build automation, documentation generation
# These often use dynamic patterns, optional dependencies, and intentional type flexibility
[[tool.ty.overrides]]
include = ["scripts/**/*.py"]

[tool.ty.overrides.rules]
invalid-assignment = "warn"
unresolved-import = "ignore"
invalid-argument-type = "ignore"
unresolved-reference = "ignore"
unresolved-attribute = "ignore"

# Mise Tasks: Build and diagnostic automation
# These are utility scripts with intentional dynamic behavior (e.g., monkey-patching warnings)
[[tool.ty.overrides]]
include = ["mise-tasks/**/*.py"]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"
unresolved-import = "ignore"
invalid-argument-type = "ignore"
unresolved-reference = "ignore"

# Tests: May use pytest fixtures, mocks, and test-specific patterns
# Also may not have test dependencies installed when running ty in dev environment
# Tests can be less exact per the project requirements - focus on src/ strictness
[[tool.ty.overrides]]
include = ["tests/**/*.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"  # pytest and other test dependencies may not be installed
unknown-argument = "ignore"  # pytest fixtures inject arguments dynamically
unresolved-reference = "ignore"  # test fixtures and dynamic test patterns
unresolved-attribute = "ignore"  # mocks and fixtures have dynamic attributes
non-subscriptable = "warn"  # Often false positive after pytest assertions
unsupported-operator = "warn"  # Type narrowing after assertions not always understood
missing-argument = "warn"  # Dynamic test patterns and fixtures
too-many-positional-arguments = "warn"  # Dynamic function calls in tests
invalid-assignment = "ignore"  # Test setup patterns
invalid-argument-type = "ignore"  # Test mocks and fixtures may have dynamic types

# Test Fixtures: Intentionally malformed or edge-case test data
# These may have type errors by design to test error handling
[[tool.ty.overrides]]
include = ["tests/fixtures/**/*.py", "tests/unit/engine/test_failover.py"]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
unresolved-reference = "ignore"

# Specific File Overrides
# These files have known type issues that are either false positives or low priority to fix

[[tool.ty.overrides]]
# All __init__.py files' lazy import patterns cause false positives
include = [
  "src/codeweaver/__init__.py",
  "src/codeweaver/*/__init__.py",
  "src/codeweaver/*/*/__init__.py",
  "src/codeweaver/*/*/*/__init__.py",
  "src/codeweaver/*/*/*/*/__init__.py",
  # there's a similar issue in some of the embedding providers
  "src/codeweaver/providers/embedding/providers/bedrock.py",
  "src/codeweaver/providers/embedding/providers/cohere.py",
  "src/codeweaver/providers/embedding/providers/google.py",
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = ["src/codeweaver/common/registry/provider.py"]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"

[[tool.ty.overrides]]
include = ["scripts/build/generate-mcp-server-json.py"]

[tool.ty.overrides.rules]
unknown-argument = "ignore"

[[tool.ty.overrides]]
include = ["src/codeweaver/providers/vector_stores/qdrant_base.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = ["src/codeweaver/core/types/aliases.py"]

[tool.ty.overrides.rules]
invalid-newtype = "ignore"

[tool.uv]
conflicts = [
  [{ extra = "full-gpu" }, { extra = "full" }],
  [{ extra = "fastembed" }, { extra = "fastembed-gpu" }]
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
code-weaver-daemon = { workspace = true }
code-weaver-tokenizers = { workspace = true }
types-boto3-custom = { path = "vendored/types_boto3_custom-1.41.2-py3-none-any.whl" }

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
dirty = false  # Disabled .dirty suffix to maintain PEP 440 compliance
# tag-branch = "main"  # Commented out to allow building on feature branches
commit-prefix = "g"
